tests/error/union_unknown.gw
#! [contains] unknown_type
union U { unknown_type unknown_variable }
